# newspaper-v1

./: .editorconfig  .gitignore  README.md  pyproject.toml
apps/articles/: admin.py  apps.py  context_processors.py  models.py  search_indexes.py  signals.py  storage.py  urls.py  views.py
apps/articles/migrations/: 0001_initial.py  0002_category.py  0003_article_image.py  0004_article_is_featured.py  0005_article_comments_count.py  0006_article_is_category_featured.py  0007_article_author.py
apps/articles/templates/articles/: article_detail.html  article_list.html  base.html
apps/articles/templates/articles/partials/: article_short.html
apps/articles/templates/articles/tags/: category_featured_articles.html  most_popular_articles.html
apps/articles/templatetags/: articles_tags.py
apps/comments/: admin.py  apps.py  forms.py  models.py  signals.py
apps/comments/migrations/: 0001_initial.py
apps/pages/: views.py
apps/pages/templates/pages/: index.html
apps/users/: admin.py  forms.py  models.py  storage.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: author_detail.html  base.html  login.html  register.html  user_detail.html  user_detail_closed.html
apps/users/templatetags/: users_tags.py
newspaper/: settings.py  urls.py
newspaper/static/css/: main.css
newspaper/templates/layouts/: master.html
newspaper/templates/partials/: footer.html  header.html
newspaper/templates/search/: search.html
